# Tetraedrs

./: .gitignore  CMakeLists.txt  Makefile  README.md  calc.hpp  release.sh  run.sh  test.txt  test_function.cpp
include/: calc.hpp  plane.hpp  point.hpp  triangle.hpp  v_line.hpp
tests/: CMakeLists.txt
tests/src/: test_function.cpp
tests/src/e2e_tests/: CMakeLists.txt
tests/src/e2e_tests/src/: checker.cpp  generator.cpp
tests/src/unit_tests/: CMakeLists.txt
tests/src/unit_tests/src/: point.cpp  v_line.cpp
